# opengl_tuts

./: CMakeLists.txt  CMakeLists_tutorial7.txt  script.bat
HeaderFiles/: VAO.h  shaderClass.h
resource/: default.vert
src/: VAO.cpp  shaderClass.cpp  stb.cpp  tutorial2.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp
